[gd_scene load_steps=4 format=3 uid="uid://bayqdgl3k7tgn"]

[ext_resource type="Script" path="res://Script/Placed_Pieces.gd" id="1_3iu8j"]
[ext_resource type="Texture2D" uid="uid://c7lhfh7n1dx8u" path="res://Art/Images/Circle.png" id="2_th11m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_l0ys1"]
radius = 40.0

[node name="PlacedPieces" type="Node2D"]
script = ExtResource("1_3iu8j")

[node name="Puzzle_Piece1" type="Sprite2D" parent="."]
position = Vector2(36, 40)

[node name="Puzzle_Piece2" type="Sprite2D" parent="."]
position = Vector2(53, 40)

[node name="Puzzle_Piece3" type="Sprite2D" parent="."]
position = Vector2(36, 55)

[node name="Puzzle_Piece4" type="Sprite2D" parent="."]
position = Vector2(53, 55)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(45, 48)
scale = Vector2(1, 1)
shape = SubResource("CircleShape2D_l0ys1")

[node name="Circle" type="Sprite2D" parent="Area2D"]
position = Vector2(45, 48)
scale = Vector2(0.3105, 0.3105)
texture = ExtResource("2_th11m")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
